hphp/test/zend/good/Zend/tests/anon/001.php
<?php
var_dump(new class{});
